--- a/app/src/main/res/layout/item_team.xml
+++ b/app/src/main/res/layout/item_team.xml
@@ -35,7 +35,7 @@
             android:id="@+id/btn_join_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Join"
+            android:text="@string/request_to_join"
             android:visibility="gone"
             tools:visibility="visible"/>
 
