--- a/app/src/main/res/layout/fragment_tournament_view.xml
+++ b/app/src/main/res/layout/fragment_tournament_view.xml
@@ -137,7 +137,7 @@
         android:id="@+id/btn_join_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Solicitar Unirse"
+        android:text="@string/request_to_join"
         android:layout_margin="16dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
