--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -4,9 +4,9 @@
 
     <item
         android:id="@+id/notificationsFragment"
-        android:icon="@android:drawable/ic_popup_reminder"
+        android:icon="@drawable/ic_notifications"
         android:title="Notificaciones"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
     <item
         android:id="@+id/userPageFragment"
